# euler-copilot-web

./: .dockerignore  .env  .env.development  .env.micro  .env.template  .env.tmp  .gitattributes  .gitignore  .prettierrc.json  Dockerfile  Jenkinsfile  README.en.md  README.md  dark-mode-fix-summary.md  env.d.ts  eslint.config.js  index.html  installer.nsh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  tsconfig.json  vite.config.ts
.github/workflows/: build-tauri-v1.yaml
MyDemo/: workFlow.vue
deploy/: .env.example  nginx.conf.tmpl  start.sh
deploy/dev/: euler_copilot.conf
deploy/k8s/: web-config.yaml  web-deployment.yaml  web-ingress.yaml  web-service.yaml
deploy/prod/: .env.example  Dockerfile  nginx.conf.tmpl  start.sh
distribution/linux/: euler-copilot-desktop.desktop  euler-copilot-web.spec
distribution/scripts/: build_rpm.sh  package_repository.sh
docs/: design.md
docs/development/: DESKTOP_CONFIG.md
docs/diagrams/src/: backend.puml  flow.puml  frontend.puml  sequence.puml
electron/main/: index.ts
electron/main/common/: cache-conf.ts  conf.ts  config.ts  ipc.ts  (+8 more)
electron/preload/: index.ts  shared.ts  types.d.ts  welcome.ts
electron/welcome/: deployServiceConnector.js  index.html  index.vue  localDeploy.vue  main.ts  onlineService.vue  timeLine.vue  types.d.ts  welcome.html
mock/: index.ts
mock/modules/: appCenter.ts  index.ts  knowledgeList.ts  mcp.ts  model.ts
patches/: monaco-editor+0.52.2.patch  monaco-editor.patch
public/: 404.html  base.css  error.html
scripts/: build-main.ts  build-preload.ts  build-welcome.ts  rollup.config.ts  utils.ts
src/: App.vue  components.d.ts  main.js  main.ts  qiankun.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  chat.rs  config.rs  main.rs  positioner.rs  utility.rs
src-tauri/template/: eulercopilot-client.desktop  eulercopilot-desktop.desktop  installer.nsi
src/api/: README.md  variable.js
src/apis/: index.ts  server.ts  tools.ts
src/assets/: base.css  color.js
src/bus/: index.ts
src/components/: CodeMonacoEditor.vue  EulerDialog.vue  Greet.vue  JSONMonacoEditor.vue  LinuxTitleBar.vue  Message.ts  NodeVariableConfig.vue  StartNodeEditor.vue  StartNodeVariableManager.vue  SvgIcon.vue  VariableChooser.vue  VariableInsertDropdown.vue  VariableRichTextEditor.vue  VariableSelector.vue  YAMLMonacoEditor.vue  useVariables.ts
src/conf/: agreement-en.md  agreement-tip.md  agreement.md  policy-en.md  policy.md  version.ts
src/hooks/: useScrollBottom.ts
src/i18n/: index.ts
src/mixins/: variableMixin.js  workFlowVariableMixin.js
src/router/: index.ts  route.ts
src/store/: account.ts  conversation.ts  historySession.ts  index.ts  lang.ts  session.ts  theme.ts
src/test/: testStartNodeDrawerUIFix.js  testSystemVariablesFix.js  testVariableDialogFix.js
src/utils/: debugVariableSelector.js  electron.ts  fetchStream.ts  index.ts  marked.js  marked.ts  markedjs.ts  testCorrectVariableAPI.js  testScopeParameterFix.js  testVariableAPI.js  testVariableIntegration.js  testVariableValidationFix.js  tools.ts  variableIssueVerification.md
src/views/: 404.vue  floatingView.vue  settingsView.vue  welcomeView.vue
web_diff/: 变更总结.md
(+205 files in other folders)
