[package]
name = "eulercopilot-client"
version = "1.0.0"
description = "EulerCopilot Desktop Client"
authors = ["Shi Hongyu", "Wu Shitong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.0.0-rc"
reqwest = { version = "0.12.7", features = ["stream"] }
futures-util = "0.3.30"
anyhow = "1.0.88"
dirs = "5.0.1"
url = "2.5.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2.0.0-rc", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
