[package]
name = "eulercopilot-desktop"
version = "0.9.1"
description = "openEuler Copilot System Desktop Client"
authors = ["Shi Hongyu", "Wu Shitong"]
edition = "2021"
license = "MulanPSL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "http-all",
    "window-all",
    "clipboard-all",
    "shell-execute",
    "shell-open",
    "fs-create-dir",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "fs-write-file",
    "global-shortcut-all",
    "system-tray",
    "macos-private-api",
] }
tauri-plugin-context-menu = "0.8.2"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.7", features = ["stream", "json"] }
futures-util = "0.3.30"
anyhow = "1.0.88"
dirs = "5.0.1"
url = "2.5.2"
webbrowser = "1.0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
